--- a/src/components/table/table.module.css
+++ b/src/components/table/table.module.css
@@ -5,7 +5,7 @@
     border: 1px solid var(--neutral-gray-300);
     border-radius: 24px;
     border-width: 1px;
-    padding: 24px;
+    padding: 24px 0 24px 24px;
     gap: 0;
     height: 100%;
     display: flex;
@@ -150,6 +150,25 @@ thead {
     overflow-y: auto;
     max-height: 60vh;
     width: 100%;
+    padding-right: 8px;
+    scrollbar-width:thin;
+    scrollbar-color: var(--neutral-gray-300 ) var(--neutral-gray-50);
+}
+
+.tableScroll::-webkit-scrollbar {
+    width: 4px;
+    background: var(--neutral-gray-200);
+}
+
+.tableScroll::-webkit-scrollbar-thumb {
+    background: var(--background);
+    border-radius: 4px;
+}
+
+.tableScroll::-webkit-scrollbar-button {
+    display: none !important;
+    height: 0;
+    width: 0;
 }
 
 .statusText {
